all implementation done

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,12 @@
     <string name="title_home">모임 만들기</string>
     <string name="title_friends">친구 목록</string>
     <string name="title_mypage">마이페이지</string>
+    <string-array name="my_header_title">
+        <item></item>
+        <item>월</item>
+        <item>화</item>
+        <item>수</item>
+        <item>목</item>
+        <item>금</item>
+    </string-array>
 </resources>
